add basic styles

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,7 +43,7 @@ body {
 form{
     margin-top: 3rem;
 }
-input {
+input, .input {
     display: block;
     padding: 0.5rem;
     margin: auto;
@@ -56,6 +56,59 @@ input {
 input[type="submit"] {
     width: fit-content;
 }
+input[type="submit"]:hover{
+    cursor: pointer;
+}
 .error{
     color:red;
+}
+header{
+    border-bottom: 1px solid black;
+}
+nav{
+    margin:1rem 2rem;
+    display: flex;
+    justify-content: space-between;
+}
+main{
+    display: flex;
+}
+.side-bar{
+    display: flex;
+    margin:0;
+    padding-top: 1rem;
+    flex-direction: column;
+    text-align: left;
+    border-right: 1px solid black;
+    margin-right: 5px;
+    padding-right: 5px;
+    gap:1rem;
+    font-size: 1.5rem;
+    flex-shrink: 0;
+    min-height: 90vh;
+}
+.app{
+    text-align: left;
+}
+.main-component{
+    padding-top: 1rem;
+    font-size: 2rem;
+}
+li{
+    font-size: 1.2rem;
+}
+.button{
+    display: block;
+    text-decoration: none;
+    background-color: hsl(0,0%,92%);
+    padding:0.5rem;
+    font-size: 2rem;
+    color:black;
+    text-align: center;
+    border: 1px solid black;
+    border-radius: 0.5rem;
+
+}
+.button:visited{
+    text-emphasis: none;
 }
