--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,11 @@
 * {
+
     text-shadow: 0 0 1px black, 1px 1px 2px white;
 }
 
 body {
+    padding: 0;
+    margin: 0;
     /* background-image: url(./bg.jpg);
     background-position: center;
     background-repeat: no-repeat;
@@ -13,12 +16,15 @@ body {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: hsl(240, 0%, 90%);
 }
+
 .welcome {
     margin-top: 3rem;
 }
+
 .login-links {
     margin-top: 5rem;
 }
+
 .login-links a {
     display: block;
     max-width: 50%;
@@ -30,6 +36,7 @@ body {
     box-shadow: 1px 1px 3px 0 black;
     background-color: hsl(120, 50%, 60%);
 }
+
 .login-links a:hover {
     transform: scale(1.05);
 }
@@ -40,10 +47,13 @@ body {
     margin-left: auto;
     margin-right: 1rem;
 }
-form{
+
+form {
     margin-top: 3rem;
 }
-input, .input {
+
+input,
+.input {
     display: block;
     padding: 0.5rem;
     margin: auto;
@@ -53,62 +63,101 @@ input, .input {
     border-radius: 0.5rem;
     font-size: 2rem;
 }
+
 input[type="submit"] {
     width: fit-content;
 }
-input[type="submit"]:hover{
+
+input[type="submit"]:hover {
     cursor: pointer;
 }
-.error{
-    color:red;
+
+.error {
+    color: red;
 }
-header{
-    border-bottom: 1px solid black;
+
+header {
+    border-bottom: 10px solid black;
+    background-color: hsl(0, 10%, 80%);
+
 }
-nav{
-    margin:1rem 2rem;
+header h1{
+    padding: 1rem;
+    margin: 0;
+}
+
+nav {
+    margin-top: -1rem !important;
+    margin: 1rem 2rem;
+    font-size: 1.3rem;
     display: flex;
     justify-content: space-between;
 }
-main{
+
+main {
     display: flex;
 }
-.side-bar{
+
+.side-bar {
     display: flex;
-    margin:0;
+    margin: 0;
     padding-top: 1rem;
     flex-direction: column;
     text-align: left;
     border-right: 1px solid black;
     margin-right: 5px;
     padding-right: 5px;
-    gap:1rem;
+    gap: 1rem;
     font-size: 1.5rem;
     flex-shrink: 0;
     min-height: 90vh;
 }
-.app{
+
+.app {
     text-align: left;
 }
-.main-component{
+
+.main-component {
     padding-top: 1rem;
     font-size: 2rem;
 }
-li{
+
+
+li {
     font-size: 1.2rem;
+    background-color: hsl(106, 40%, 50%);
+    border-radius: 1rem;
+    padding:1rem;
 }
-.button{
-    display: block;
-    text-decoration: none;
-    background-color: hsl(0,0%,92%);
-    padding:0.5rem;
-    font-size: 2rem;
-    color:black;
-    text-align: center;
-    border: 1px solid black;
-    border-radius: 0.5rem;
+.li-item{
+    margin-bottom: 1rem;
+    background-color: hsl(106, 40%, 60%);
+    width: 100%;
 
 }
-.button:visited{
+
+.button {
+    display: block; 
+    box-sizing: border-box;
+    text-decoration: none;
+    padding: 0.5rem;
+    margin: 0.5rem;
+    font-size: 2rem;
+    color: black ;
+    opacity: 1;
+    width:12rem !important;
+    text-align: center;
+    border: 1px solid black;
+    border-radius: 0.5rem ;
+    background-color: beige;
+
+}
+.button:hover{
+    transform: scale(1.02);
+}
+
+.button:visited {
     text-emphasis: none;
+    color: black ;
+
 }
